force-app/main/default/objects/Customer_Extend__c/Customer_Extend__c.object-meta.xml
<CustomObject>
    <label>Customer Extend</label>
    <nameField>
        <label>Customer Extend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Extends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>