force-app/main/default/objects/Customer_Extend__c/fields/Account_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Account_Remarks__c</fullName>
    <label>Account Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>