force-app/main/default/objects/Customer_Extend__c/fields/Add_VAT_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Add_VAT_Reg_No__c</fullName>
    <description>MDG主数据：VAT 号</description>
    <label>Add. VAT Reg. No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>