force-app/main/default/objects/Customer_Extend__c/fields/Create_View__c.field-meta.xml
<CustomField>
    <fullName>Create_View__c</fullName>
    <label>Create View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Create Company</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Create Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>