force-app/main/default/objects/Customer_Extend__c/fields/Customer_EDI_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_EDI_ID_Type__c</fullName>
    <description>MDG主数据：客户EDI 类型</description>
    <label>Customer EDI ID Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>