force-app/main/default/objects/Customer_Extend__c/fields/Customer_Group2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group2__c</fullName>
    <label>Customer Group 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>IAZ</fullName>
                <label>AGTEN</label>
            </value>
            <value>
                <fullName>T93</fullName>
                <label>AMAZON</label>
            </value>
            <value>
                <fullName>AU1</fullName>
                <label>AU1:super cheap</label>
            </value>
            <value>
                <fullName>AU2</fullName>
                <label>AU2:Smartuser</label>
            </value>
            <value>
                <fullName>AU3</fullName>
                <label>AU3:AC-customer</label>
            </value>
            <value>
                <fullName>AU4</fullName>
                <label>AU4:Tradezone</label>
            </value>
            <value>
                <fullName>AU5</fullName>
                <label>AU5:Commercial display</label>
            </value>
            <value>
                <fullName>AU6</fullName>
                <label>AU6:Emerging Dealer</label>
            </value>
            <value>
                <fullName>AU7</fullName>
                <label>AU7:Dealer</label>
            </value>
            <value>
                <fullName>AU8</fullName>
                <label>AU8:Dealer Emperor</label>
            </value>
            <value>
                <fullName>AU9</fullName>
                <label>AU9:Wholesale</label>
            </value>
            <value>
                <fullName>AUA</fullName>
                <label>AUA:Trade</label>
            </value>
            <value>
                <fullName>AUB</fullName>
                <label>AUB:Trade Preferred</label>
            </value>
            <value>
                <fullName>AUC</fullName>
                <label>AUC:Trade Plus</label>
            </value>
            <value>
                <fullName>AUD</fullName>
                <label>AUD:RESELL T2</label>
            </value>
            <value>
                <fullName>AUE</fullName>
                <label>AUE:Spare Parts Other</label>
            </value>
            <value>
                <fullName>AUF</fullName>
                <label>AUF:Logistics Claim A/C</label>
            </value>
            <value>
                <fullName>AUG</fullName>
                <label>AUG:IBG</label>
            </value>
            <value>
                <fullName>AUH</fullName>
                <label>AUH:HVAC Consolidated</label>
            </value>
            <value>
                <fullName>AUI</fullName>
                <label>AUI:Lawrence &amp; Hanson</label>
            </value>
            <value>
                <fullName>IT3</fullName>
                <label>BEST BUY</label>
            </value>
            <value>
                <fullName>IAY</fullName>
                <label>BJ&apos;S</label>
            </value>
            <value>
                <fullName>TH2</fullName>
                <label>BKK</label>
            </value>
            <value>
                <fullName>IT4</fullName>
                <label>BRANDSMART</label>
            </value>
            <value>
                <fullName>C01</fullName>
                <label>C01:CAS</label>
            </value>
            <value>
                <fullName>C02</fullName>
                <label>C02:Builder -JCP</label>
            </value>
            <value>
                <fullName>C03</fullName>
                <label>C03:Builder-GL</label>
            </value>
            <value>
                <fullName>C04</fullName>
                <label>C04:TG</label>
            </value>
            <value>
                <fullName>C05</fullName>
                <label>C05:Builder-KD</label>
            </value>
            <value>
                <fullName>C06</fullName>
                <label>C06:Builder-AC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>