force-app/main/default/objects/Customer_Extend__c/fields/Customer_Group_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_3__c</fullName>
    <description>客户组3</description>
    <label>Customer Group 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D01</fullName>
                <label>D01:Pötzsch</label>
            </value>
            <value>
                <fullName>D02</fullName>
                <label>D02:Müller/Reichenbach</label>
            </value>
            <value>
                <fullName>D03</fullName>
                <label>D03:Lustig</label>
            </value>
            <value>
                <fullName>D04</fullName>
                <label>D04:RTV Service</label>
            </value>
            <value>
                <fullName>D05</fullName>
                <label>D05:ESC</label>
            </value>
            <value>
                <fullName>D06</fullName>
                <label>D06:Mediapark/Ebersbach</label>
            </value>
            <value>
                <fullName>D07</fullName>
                <label>D07:expert Oberlausitz</label>
            </value>
            <value>
                <fullName>D08</fullName>
                <label>D08:expert Lübbenau</label>
            </value>
            <value>
                <fullName>D09</fullName>
                <label>D09:expert Ost</label>
            </value>
            <value>
                <fullName>D10</fullName>
                <label>D10:Jäger</label>
            </value>
            <value>
                <fullName>D11</fullName>
                <label>D11:Lindner</label>
            </value>
            <value>
                <fullName>D12</fullName>
                <label>D12:Wunder</label>
            </value>
            <value>
                <fullName>D13</fullName>
                <label>D13:EC Torgau</label>
            </value>
            <value>
                <fullName>D14</fullName>
                <label>D14:Kaiser</label>
            </value>
            <value>
                <fullName>D15</fullName>
                <label>D15:Kraus</label>
            </value>
            <value>
                <fullName>D16</fullName>
                <label>D16:Apel + Eberitsch</label>
            </value>
            <value>
                <fullName>D17</fullName>
                <label>D17:Kappenberger + Braun</label>
            </value>
            <value>
                <fullName>D18</fullName>
                <label>D18:Teuschler</label>
            </value>
            <value>
                <fullName>D19</fullName>
                <label>D19:Engel</label>
            </value>
            <value>
                <fullName>D20</fullName>
                <label>D20:Scholz</label>
            </value>
            <value>
                <fullName>D21</fullName>
                <label>D21:Fiedler</label>
            </value>
            <value>
                <fullName>D22</fullName>
                <label>D22:rfe elektro union</label>
            </value>
            <value>
                <fullName>D23</fullName>
                <label>D23:Elektro Center Rathe</label>
            </value>
            <value>
                <fullName>D24</fullName>
                <label>D24:Zeesener</label>
            </value>
            <value>
                <fullName>D25</fullName>
                <label>D25:Bild und Ton</label>
            </value>
            <value>
                <fullName>D26</fullName>
                <label>D26:expert Nord</label>
            </value>
            <value>
                <fullName>D27</fullName>
                <label>D27:Friedrich/Waren</label>
            </value>
            <value>
                <fullName>D28</fullName>
                <label>D28:Kurtz &amp; gut</label>
            </value>
            <value>
                <fullName>D29</fullName>
                <label>D29:Grützmann</label>
            </value>
            <value>
                <fullName>D30</fullName>
                <label>D30:Femmer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>