force-app/main/default/objects/Customer_Extend__c/fields/Customer_Group_4__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_4__c</fullName>
    <description>客户组4</description>
    <label>Customer Group 4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D01</fullName>
                <label>D01:WG Sachsen</label>
            </value>
            <value>
                <fullName>D02</fullName>
                <label>D02:KEINE</label>
            </value>
            <value>
                <fullName>D03</fullName>
                <label>D03:ESC</label>
            </value>
            <value>
                <fullName>D04</fullName>
                <label>D04:EHG</label>
            </value>
            <value>
                <fullName>D05</fullName>
                <label>D05:Expert Jäger</label>
            </value>
            <value>
                <fullName>D06</fullName>
                <label>D06:Kappenberger + Braun</label>
            </value>
            <value>
                <fullName>D07</fullName>
                <label>D07:Bening</label>
            </value>
            <value>
                <fullName>D08</fullName>
                <label>D08:Megaland</label>
            </value>
            <value>
                <fullName>D09</fullName>
                <label>D09:Dodenhof</label>
            </value>
            <value>
                <fullName>D10</fullName>
                <label>D10:Döring</label>
            </value>
            <value>
                <fullName>D11</fullName>
                <label>D11:Total Fachmarkt Biel</label>
            </value>
            <value>
                <fullName>D12</fullName>
                <label>D12:Expert Klein</label>
            </value>
            <value>
                <fullName>D13</fullName>
                <label>D13:Herfag</label>
            </value>
            <value>
                <fullName>D14</fullName>
                <label>D14:Gröblinghoff</label>
            </value>
            <value>
                <fullName>D15</fullName>
                <label>D15:Meinerzhagen</label>
            </value>
            <value>
                <fullName>D16</fullName>
                <label>D16:Pasternak</label>
            </value>
            <value>
                <fullName>D17</fullName>
                <label>D17:Bielinsky</label>
            </value>
            <value>
                <fullName>D18</fullName>
                <label>D18:Promedia</label>
            </value>
            <value>
                <fullName>D19</fullName>
                <label>D19:Udo Lermann</label>
            </value>
            <value>
                <fullName>D20</fullName>
                <label>D20:Stommel</label>
            </value>
            <value>
                <fullName>D21</fullName>
                <label>D21:WG Bayern</label>
            </value>
            <value>
                <fullName>D22</fullName>
                <label>D22:Ulmcke</label>
            </value>
            <value>
                <fullName>D23</fullName>
                <label>D23:Müller Saarwellingen</label>
            </value>
            <value>
                <fullName>D24</fullName>
                <label>D24:Hirsch + Ille</label>
            </value>
            <value>
                <fullName>D25</fullName>
                <label>D25:Esch</label>
            </value>
            <value>
                <fullName>D26</fullName>
                <label>D26:EHG Süd-West</label>
            </value>
            <value>
                <fullName>D27</fullName>
                <label>D27:WG Süd West</label>
            </value>
            <value>
                <fullName>D28</fullName>
                <label>D28:SchwabenFranken</label>
            </value>
            <value>
                <fullName>D29</fullName>
                <label>D29:Technoland Deizisau</label>
            </value>
            <value>
                <fullName>D30</fullName>
                <label>D30:Octomedia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>