force-app/main/default/objects/Customer_Extend__c/fields/Customer_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Short_Name__c</fullName>
    <formula>Customer__r.Name</formula>
    <label>Customer Short Name</label>
    <type>Text</type>
</CustomField>