force-app/main/default/objects/Customer_Extend__c/fields/Customer_Statistics_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Statistics_Group__c</fullName>
    <label>Customer Statistics Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>