force-app/main/default/objects/Customer_Extend__c/fields/Customer_Use_Rules__c.field-meta.xml
<CustomField>
    <fullName>Customer_Use_Rules__c</fullName>
    <label>Customer Use Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>