force-app/main/default/objects/Customer_Extend__c/fields/Deliverying_Plant__c.field-meta.xml
<CustomField>
    <fullName>Deliverying_Plant__c</fullName>
    <label>Deliverying Plant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hisense_Entity_Sales__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0001</fullName>
                <label>0001:Werk 0001</label>
            </value>
            <value>
                <fullName>8000</fullName>
                <label>8000:青岛海信进出口有限公司</label>
            </value>
            <value>
                <fullName>8010</fullName>
                <label>8010:青岛海信国际营销有限公司</label>
            </value>
            <value>
                <fullName>8011</fullName>
                <isActive>false</isActive>
                <label>8011:青岛海信国际营销有限公司</label>
            </value>
            <value>
                <fullName>8040</fullName>
                <label>8040:海信国际(香港)有限公司</label>
            </value>
            <value>
                <fullName>8050</fullName>
                <label>8050:海信国际营销美洲控股有限公司</label>
            </value>
            <value>
                <fullName>8060</fullName>
                <label>8060:海信国际(香港)有限公司</label>
            </value>
            <value>
                <fullName>8070</fullName>
                <label>8070:青岛海信中非控股股份有限公司</label>
            </value>
            <value>
                <fullName>8071:青岛海信中非控股股份有限公司</fullName>
                <isActive>false</isActive>
                <label>8071:青岛海信中非控股股份有限公司</label>
            </value>
            <value>
                <fullName>8080</fullName>
                <label>8080:海信(香港)中非销售控股有限公司</label>
            </value>
            <value>
                <fullName>8090</fullName>
                <label>8090:海信(香港)中非生產控股有限公司</label>
            </value>
            <value>
                <fullName>80A0</fullName>
                <label>80A0:青岛海信国际营销亚洲控股有限公司</label>
            </value>
            <value>
                <fullName>80B0</fullName>
                <label>80B0:海信国际营销新加坡控股有限公司</label>
            </value>
            <value>
                <fullName>80D0:国际营销结算中心业务</fullName>
                <isActive>false</isActive>
                <label>80D0:国际营销结算中心业务</label>
            </value>
            <value>
                <fullName>80E0:中非控股结算中心业务</fullName>
                <isActive>false</isActive>
                <label>80E0:中非控股结算中心业务</label>
            </value>
            <value>
                <fullName>80N0</fullName>
                <label>80N0: Hisense International Electronics Trading (Singapore) Pte. Ltd.</label>
            </value>
            <value>
                <fullName>8110</fullName>
                <label>8110:Hisense US Plant</label>
            </value>
            <value>
                <fullName>8111</fullName>
                <label>8111:Hisense Mexico Factory</label>
            </value>
            <value>
                <fullName>8119</fullName>
                <label>8119:Hisense US Parts Scrap Plant</label>
            </value>
            <value>
                <fullName>8120</fullName>
                <label>8120:Hisense CA Plant</label>
            </value>
            <value>
                <fullName>8140</fullName>
                <label>8140:Hisense MX Plant</label>
            </value>
            <value>
                <fullName>8150</fullName>
                <label>8150:Hisense electronica mex plant</label>
            </value>
            <value>
                <fullName>8170</fullName>
                <label>8170:Hisense Electric Manufacture</label>
            </value>
            <value>
                <fullName>8171</fullName>
                <label>8171:Hisense MX Service Plant</label>
            </value>
            <value>
                <fullName>8180</fullName>
                <label>8180:Hisense MX property manag</label>
            </value>
            <value>
                <fullName>8200</fullName>
                <label>8200:Hisense Australia Plant</label>
            </value>
            <value>
                <fullName>8210</fullName>
                <label>8210:Hisense New Zealand Plant</label>
            </value>
            <value>
                <fullName>8300</fullName>
                <label>8300:Hisense DE Plant</label>
            </value>
            <value>
                <fullName>8301</fullName>
                <label>8301:Hisense DE Plant - CZ</label>
            </value>
            <value>
                <fullName>8302</fullName>
                <label>8302:Hisense DE Plant -NL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>