force-app/main/default/objects/Customer_Extend__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
                <default>true</default>
                <label>External sales</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>In-house sales (withithe group)</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>E-commerce business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>