force-app/main/default/objects/Customer_Extend__c/fields/E_commerce_Customer_Label__c.field-meta.xml
<CustomField>
    <fullName>E_commerce_Customer_Label__c</fullName>
    <label>E-commerce Customer Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10-Pure Player</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20-Click &amp; Mortar</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30-No Online</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>