force-app/main/default/objects/Customer_Extend__c/fields/EDI_ID2__c.field-meta.xml
<CustomField>
    <fullName>EDI_ID2__c</fullName>
    <description>MDG主数据：客户EDI ID2</description>
    <label>EDI ID2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>