force-app/main/default/objects/Customer_Extend__c/fields/EDI_ID__c.field-meta.xml
<CustomField>
    <fullName>EDI_ID__c</fullName>
    <description>MDG主数据：客户EDI ID</description>
    <label>EDI ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>