force-app/main/default/objects/Customer_Extend__c/fields/Extend_or_Not__c.field-meta.xml
<CustomField>
    <fullName>Extend_or_Not__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extend or Not</label>
    <type>Checkbox</type>
</CustomField>