force-app/main/default/objects/Customer_Extend__c/fields/Financial_Approval__c.field-meta.xml
<CustomField>
    <fullName>Financial_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Approval</label>
    <type>Checkbox</type>
</CustomField>