force-app/main/default/objects/Customer_Extend__c/fields/Hisense_Entity_Sales__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity_Sales__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hisense_Entity</valueSetName>
    </valueSet>
</CustomField>