force-app/main/default/objects/Customer_Extend__c/fields/International_Trade_Terms__c.field-meta.xml
<CustomField>
    <fullName>International_Trade_Terms__c</fullName>
    <description>MDG主数据：国际贸易条款</description>
    <label>International Trade Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CFR</fullName>
                <label>Costs and freight</label>
            </value>
            <value>
                <fullName>CIF</fullName>
                <label>Costs, insurance &amp; freight</label>
            </value>
            <value>
                <fullName>CIP</fullName>
                <label>Carriage and insurance paid to</label>
            </value>
            <value>
                <fullName>CPT</fullName>
                <label>Carriage paid to</label>
            </value>
            <value>
                <fullName>DAF</fullName>
                <label>Delivered at frontier</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <label>Delivered at place</label>
            </value>
            <value>
                <fullName>DAT</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
                <label>Delivered Duty Paid</label>
            </value>
            <value>
                <fullName>DDU</fullName>
                <label>Delivered Duty Unpaid(DEL)</label>
            </value>
            <value>
                <fullName>DEQ</fullName>
                <label>Delivered ex quay (duty paid)</label>
            </value>
            <value>
                <fullName>DES</fullName>
                <label>Delivered ex ship</label>
            </value>
            <value>
                <fullName>EXW</fullName>
                <label>Ex Works</label>
            </value>
            <value>
                <fullName>FAS</fullName>
                <label>Free Alongside Ship</label>
            </value>
            <value>
                <fullName>FCA</fullName>
                <label>Free Carrier</label>
            </value>
            <value>
                <fullName>FH</fullName>
                <label>Free house</label>
            </value>
            <value>
                <fullName>FOB</fullName>
                <label>Free on board</label>
            </value>
            <value>
                <fullName>UN</fullName>
                <label>Not Free</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>