force-app/main/default/objects/Customer_Extend__c/fields/Order_status__c.field-meta.xml
<CustomField>
    <fullName>Order_status__c</fullName>
    <label>Order status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>锁定</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>未锁定</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>